Fixed registration, reworked ZOD validation schema logic
