# backend/src/routes/v1/authRoutes.ts
@@ -1,25 +1,20 @@
 import {Router} from 'express';
 import {login, registerBusiness, registerUser} from '../../controllers/v1/authController.ts';
 import {validateBody} from '../../middleware/validation.ts';
-import {insertBusinessSchema, insertUserSchema} from '../../db/schema.ts';
-import {z} from 'zod';
+
+import {registerBusinessVal, loginVal, registerUserVal} from '../../validators/accounts.ts';
 
 const router = Router();
-
-const loginSchema = z.object({
-    email: z.email('Invalid email'),
-    password: z.string().min(8, 'Password is required').max(255, 'Password must be 8-255 characters')
-});
 
 //region GET
 //endregion
 
 
 //region POST
-router.post('/register/user', validateBody(insertUserSchema), registerUser);
-router.post('/register/business', validateBody(insertBusinessSchema), registerBusiness);
+router.post('/register/user', validateBody(registerUserVal), registerUser);
+router.post('/register/business', validateBody(registerBusinessVal), registerBusiness);
 
-router.post('/login', validateBody(loginSchema), login);
+router.post('/login', validateBody(loginVal), login);
 //endregion
 
 
